--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "za.co.weatherappdvt"
         minSdkVersion 13
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:gridlayout-v7:25.3.1'
+    compile 'com.android.tools.lint:lint-api:26.1.2'
+    compile 'com.android.tools.lint:lint-checks:26.1.2'
 }
